fix: image editor not showing

--- a/static/css/parts/Main.css
+++ b/static/css/parts/Main.css
@@ -8,6 +8,7 @@
 #MainContent {
   contain: strict;
   flex: 1;
+  display: flex;
 }
 
 .EditorText {
